# alele

./: .gitignore  CMakeLists.txt  README.md
cmake/: Findlibzmq.cmake
doc/: datastore.md  design.md  emails.md  entities.md  protocol.md  rpc.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt  coro.h  directory.h  error.h  expected.h  id.h  zeromq.h
src/protocol/: CMakeLists.txt  client.h
src/rpc/: CMakeLists.txt  server.cpp  server.h  zeromq.cpp  zeromq.h
src/server/: CMakeLists.txt  clientservice.cpp  clientservice.h  main.cpp  storage.cpp  storage.h  worker.h  workermanager.h
src/server/storage/: directorystorage.cpp  directorystorage.h
src/services/: CMakeLists.txt  clientserviceinterface.h
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  id_test.cpp  main.cpp
tests/helpers/: CMakeLists.txt  gmockhelpers.h
tests/server/: CMakeLists.txt  clientservice_test.cpp  main.cpp
